# pysamsung-dplug

./: README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
docs/: README.md  capabilities.md  commands.md  connection-and-auth.md  provisioning.md  reverse-engineering.md  scheduling.md  state-and-control.md  transport.md
src/samsung_dplug/: __init__.py  client.py  commands.py  options.py  schedule.py  stream.py
tests/: test_commands.py  test_options.py  test_parsing.py  test_schedule.py  test_stream_handle.py
